vitis/nlp-dse-without-tree/symm_MEDIUM_evaluation/only_nlp111/merlin.log

INFO: [MERCC-1096] Host - 'ubuntu-xilinx-dev-spouget-001' with linux x86_64-linux-gnu-thread-multi
INFO: [MERCC-1097] User - 
INFO: [MERCC-1098] Time - Thu Dec 12 12:38:00 PM UTC 2024
INFO: [MERCC-1099] Directory - /workspaces/Sisyphus_Result/vitis/nlp-dse-without-tree/symm_MEDIUM_evaluation/only_nlp111

INFO: [MERCC-1041] Setting platform to /opt/xilinx/platforms/xilinx_u200_gen3x16_xdma_2_202110_1/xilinx_u200_gen3x16_xdma_2_202110_1.xpfm.
INFO: [MERCC-1042] Checking Xilinx v++ ...
INFO: [MERCC-1043] Found Xilinx v++ : /tools/Xilinx/Vitis/2023.2/bin/v++

INFO: [MERCC-1033] Syntax checking...

Starting optimization step 0 none args="-a cstd=c99 -a cxxstd=c++11 -a impl_tool=sdaccel -a skip_syntax_check=" ... symm.c: In function ‘kernel_symm’:
symm.c:43:19: error: too few arguments to function ‘compute_dd2’
   43 |           temp2 = compute_dd2(temp2, B[k][j], A[i][k]);
      |                   ^~~~~~~~~~~
symm.c:11:7: note: declared here
   11 | float compute_dd2(float temp2, float b, float a, int i, int k){
      |       ^~~~~~~~~~~



ERROR: [MERCC-3057] Syntax check failed.
Hint: only c++03 or c99 is supported now.

ERROR: [MERCC-3044] Merlin compilation failed. See above for each details.
